# markdown-note-app

./: cargo.toml  index.html  package-lock.json
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/TestVault/: TestNote.md
src-tauri/src/: lib.rs
src-tauri/src/feature/: graph.rs  metadata.rs  mod.rs  search.rs
src-tauri/src/storage/: mod.rs  note.rs  vault.rs
src-tauri/src/utils/: file_operations.rs  markdown.rs  mod.rs  string_utils.rs
