[package]
name = "tauri-app"
version = "0.1.0"
description = "A Markdown-based note-taking app inspired by Obsidian."
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-macros = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pulldown-cmark = "0.13.0"
regex = "1.11.1"
tantivy = "0.22.0"
petgraph = "0.7.1"
walkdir = "2.5.0"
ammonia = "4.0.0"
lazy_static = "1.5.0"
nanoid = "0.4.0"
